// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CustomizableTheme Should render correctly (settings are hidden) 1`] = `
<ThemeProvider
  theme={
    Object {
      "colors": Object {
        "accent": "cyan",
        "background": "#fff",
        "backgroundInverse": "red",
        "light": "orange",
        "primary": "yellow",
        "text": "blue",
        "textInverse": "green",
      },
      "font": Object {
        "family": "Nunito",
        "lineHeight": "1.6",
        "size": "18px",
      },
    }
  }
>
  <styled.div>
    <div>
      here are children
    </div>
    <styled.div>
      <MdInvertColorsOn
        onClick={[Function]}
      />
    </styled.div>
    <styled.div
      isVisible={false}
    >
      <ColorSettings
        changeColor={[Function]}
        commit={[Function]}
        reset={[Function]}
        theme={
          Object {
            "colors": Object {
              "accent": "cyan",
              "background": "#fff",
              "backgroundInverse": "red",
              "light": "orange",
              "primary": "yellow",
              "text": "blue",
              "textInverse": "green",
            },
            "font": Object {
              "family": "Nunito",
              "lineHeight": "1.6",
              "size": "18px",
            },
          }
        }
      />
    </styled.div>
  </styled.div>
</ThemeProvider>
`;

exports[`CustomizableTheme Should render correctly (settings are visible) 1`] = `
<ThemeProvider
  theme={
    Object {
      "colors": Object {
        "accent": "cyan",
        "background": "#fff",
        "backgroundInverse": "red",
        "light": "orange",
        "primary": "yellow",
        "text": "blue",
        "textInverse": "green",
      },
      "font": Object {
        "family": "Nunito",
        "lineHeight": "1.6",
        "size": "18px",
      },
    }
  }
>
  <styled.div>
    <div>
      here are children
    </div>
    <styled.div>
      <MdInvertColorsOn
        onClick={[Function]}
      />
    </styled.div>
    <styled.div
      isVisible={true}
    >
      <ColorSettings
        changeColor={[Function]}
        commit={[Function]}
        reset={[Function]}
        theme={
          Object {
            "colors": Object {
              "accent": "cyan",
              "background": "#fff",
              "backgroundInverse": "red",
              "light": "orange",
              "primary": "yellow",
              "text": "blue",
              "textInverse": "green",
            },
            "font": Object {
              "family": "Nunito",
              "lineHeight": "1.6",
              "size": "18px",
            },
          }
        }
      />
    </styled.div>
  </styled.div>
</ThemeProvider>
`;
